Closed Bug 180927 Opened 23 years ago Closed 23 years ago

nsNNTPNewsgroupList::CleanUp deletes uninitialized m_knownArts.set

Categories

(MailNews Core :: Backend, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

Details

(Keywords: crash)

Attachments

(1 file)

if (m_knownArts.set) { delete m_knownArts.set; + m_knownArts.set 0xcdcdcdcd nsNNTPNewsgroupList::CleanUp(nsNNTPNewsgroupList * const 0x03b43380) line 148 + 31 bytes nsNNTPNewsgroupList::~nsNNTPNewsgroupList() line 109 nsNNTPNewsgroupList::`scalar deleting destructor'(unsigned int 1) + 15 bytes nsNNTPNewsgroupList::Release(nsNNTPNewsgroupList * const 0x03b43380) line 111 + 179 bytes XPCWrappedNative::~XPCWrappedNative() line 547 + 18 bytes XPCWrappedNative::`scalar deleting destructor'(unsigned int 1) + 15 bytes XPCWrappedNative::Release(XPCWrappedNative * const 0x03b43320) line 777 + 147 bytes XPCWrappedNative::FlatJSObjectFinalized(JSContext * 0x004f3e70, JSObject * 0x035820f0) line 897 XPC_WN_NoHelper_Finalize(JSContext * 0x004f3e70, JSObject * 0x035820f0) line 632 js_FinalizeObject(JSContext * 0x004f3e70, JSObject * 0x035820f0) line 1840 + 96 bytes js_GC(JSContext * 0x004f3e70, unsigned int 0) line 1311 + 11 bytes js_ForceGC(JSContext * 0x004f3e70, unsigned int 0) line 993 + 13 bytes JS_GC(JSContext * 0x004f3e70) line 1659 + 11 bytes main(int 1, char * * 0x004a46b4) line 939 + 10 bytes mainCRTStartup() line 338 + 17 bytes
Keywords: crash
QA Contact: gayatri → stephend
Attachment #106809 - Flags: superreview?(bzbarsky)
Attachment #106809 - Flags: review?(suresh)
Comment on attachment 106809 [details] [diff] [review] move constructor stuff to the constructor... sr=bzbarsky if those are in the right order (please check!)
Attachment #106809 - Flags: superreview?(bzbarsky) → superreview+
Blocks: 181491
Blocks: 181494
Blocks: 181496
Blocks: 181498
Blocks: 181500
Blocks: 181503
Blocks: 181505
Blocks: 181507
Blocks: 181509
Blocks: 181512
No longer blocks: 181512
No longer blocks: 181509
No longer blocks: 181507
No longer blocks: 181505
No longer blocks: 181500
No longer blocks: 181498
No longer blocks: 181496
No longer blocks: 181494
No longer blocks: 181503
Attachment #106809 - Flags: review?(suresh) → review?(sspitzer)
Attachment #106809 - Flags: review?(sspitzer) → review?(dmose)
Comment on attachment 106809 [details] [diff] [review] move constructor stuff to the constructor... r=dmose
Attachment #106809 - Flags: review?(dmose) → review+
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: