Bug 180927 nsNNTPNewsgroupList::CleanUp deletes uninitialized m_knownArts.set r=dmose sr=bz